--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,6 +2,6 @@ $decades-black: #303030;
 $decades-related-black: #040404;
 $decades-grey-3: #a6a6a6;
 $decades-blue: #0085ff;
-$decades-red: #d00;
+$decades-red: #f00;
 $decades-active-red: #900;
 $decades-credit-color: #808080;
