--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,3 +1,4 @@
+// Old Vars
 $decades-black: #303030;
 $decades-related-black: #040404;
 $decades-grey-3: #a6a6a6;
@@ -5,4 +6,9 @@ $decades-blue: #0085ff;
 $decades-red: #f00;
 $decades-active-red: #900;
 $decades-credit-color: #808080;
+
+// UI Elements
 $light-gray: #f0f0f0;
+$purple: #7968d9;
+$purple-hover: #6154af;
+$purple-active: #322b5a;
